# SLAM-IMU-ESKF

./: CMakeLists.txt  eskf.md  package.xml
eskf/: errorViewer.py  errorViewer2D.py
include/: filter.hpp
include/eskf/: eskf.hpp  eskf2D.hpp
launch/: view2D_launch.py  view_launch.py
scripts/: errorViewer.py
src/: eskf.cpp  eskf2D.cpp  slam_imu.cpp  slam_imu_2d.cpp
tools/: analyseSLAM.py  slam.csv
